# Turing-Sort

./: .gitignore  CMakeLists.txt  Makefile  README.md  i_tape.hpp  input.txt  main.cpp  tape.cpp  tape.hpp  tape_sorter.cpp  tape_sorter.hpp
src/: functions.cpp  functions.hpp  i_tape.hpp  tape.cpp  tape.hpp  tape_sorter.cpp  tape_sorter.hpp
tests/: test_sorter.cpp  test_tape.cpp
